replace 'all or none' permission tree UI + API
also adds error toasts + sorted folders + changing folder icons
